--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,94 @@
-.App {
-  text-align: center;
-}
+@import url('https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Open+Sans:ital,wght@1,400;1,800&family=Roboto:wght@100&family=Sacramento&display=swap');
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+/* '*' specifies that all the elements are selected and elemnts means the one which have opening and 
+closing tags associated with them <p></> */
+/*   box-sizing say wheteher or not to incluse the padding and border to be part of width */
+/* border-box means to include the padding and border inside the part of actual box  */
+*{
+  box-sizing: border-box;
+ margin : 0 ; 
+ padding : 0 ; 
+ font-family : 'Montserrat' , sans-serif;
+ background-color : #1a1a1c ;
+ color : white ; 
+} 
+.coin-app{
+  display : flex ; 
+  flex-direction: column ;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-top : 64px ; 
+  color : white
+}
+.coin-search{
+  display : flex  ; 
+  flex-direction: column ; 
+  align-items: center ;
+
+  margin-bottom : 64px ; 
+}
+.coin-text{
+  margin-bottom : 32px ; 
+  text-align : center ; 
+}
+.coin-input{
+  padding-left : 16px ; 
+  /* text-align : center ;  */
+  width : 260px ;
+  height : 50px ;
+  border-radius : 15px ; 
+  border:0 ;
+  /* background-color : #ac32e4 ;  */
+  background-image: linear-gradient( to bottom left , #ac32e4 , #7918f2 , #4801ff  );
+  color : white;
+  transition : all .25s ease-in-out;
+}
+.coin-input::placeholder{
+  color : white ; 
 }
 
-.App-link {
-  color: #61dafb;
+.coin-input:hover{
+  transform: scale(1.1);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.dropdown{
+  display: inline-block;
+}
+.dropbtn{
+  background-image: linear-gradient( to bottom right , #ac32e4 , #7918f2 , #4801ff  );
+  width:100px ;
+  height : 30px; 
+  border : 0 ; 
+  border-radius: 5px;
+
+}
+.dropdown-content{
+  display:none ; 
+  
+}
+
+.dropdown:hover .dropdown-content {display: block;}
+.drop-cnt{
+  /* background-color: #3333ff; */
+  background-color: #9933ff;
+  /* display : block ;  */
+  width:fit-content  ;
+  height : 30px; 
+  border-radius: 5px;
+  padding-top : 5px ;
+  padding-left : 5px ; 
+  padding-right : 5px ;  
+  /* border : 0 ;  */
+  margin:5px ; 
+  border:0;
+
+}
+.drop-inpt{
+  width:130px;
+  height : 30px; 
+  border-radius: 5px;
+  padding-left : 5px ; 
+  margin:5px ; 
+  /* color : white ; */
+  background-color: white ;
+  /* margin:5px   */
 }
