--- a/src/App.css
+++ b/src/App.css
@@ -19,12 +19,17 @@ closing tags associated with them <p></> */
   margin-top : 64px ; 
   color : white
 }
+.coin-heading{
+  display : flex ; 
+  justify-content : space-between;
+}
 .coin-search{
-  display : flex  ; 
+  margin : 8px ; 
+  /* display : flex  ; 
   flex-direction: column ; 
   align-items: center ;
 
-  margin-bottom : 64px ; 
+  margin-bottom : 64px ;  */
 }
 .coin-text{
   margin-bottom : 32px ; 
@@ -41,54 +46,104 @@ closing tags associated with them <p></> */
   background-image: linear-gradient( to bottom left , #ac32e4 , #7918f2 , #4801ff  );
   color : white;
   transition : all .25s ease-in-out;
+  margin:8px ; 
 }
 .coin-input::placeholder{
   color : white ; 
 }
 
 .coin-input:hover{
-  transform: scale(1.1);
+  transform: scale(1.03);
 }
 
 .dropdown{
-  display: inline-block;
+  /* display: inline-block; */
+  margin : 5px ; 
+  ;
 }
 .dropbtn{
   background-image: linear-gradient( to bottom right , #ac32e4 , #7918f2 , #4801ff  );
-  width:100px ;
-  height : 30px; 
+  width:260px ;
+  height : 50px; 
   border : 0 ; 
-  border-radius: 5px;
+  /* border-radius: 5px; */
+  border-radius : 15px ; 
+  text-align: left;
+  padding-left : 16px ; 
+  margin:8px ; 
+  transition : all .25s ease-in-out;
+
+
 
 }
-.dropdown-content{
+
+.dropdown-cntnt{
+  /* visibility: hidden; */
   display:none ; 
-  
 }
 
-.dropdown:hover .dropdown-content {display: block;}
+/* .dropdown:hover .dropdown-cntnt{ display:block   } */
+.dropbtn:hover{
+  transform: scale(1.03);
+
+}
+
+.drop-inpt{
+  width:150px;
+  height : 40px; 
+  border-radius: 5px;
+  padding-left : 5px ; 
+  
+  /* color : white ; */
+  /* background-color: white ; */
+  display:block  ; 
+  /* margin-left : 0 ;  */
+  margin-right: 10px ; 
+  background-color: white ;
+  color : black ; 
+  border : none ; 
+ 
+  /* margin:5px   */
+}
+.drop-input{
+  display:flex ; 
+  flex-direction: row-reverse ;
+  
+  
+
+}
+.drop-btn{
+  display:flex ; 
+  flex-direction: row-reverse ;
+  margin-right: 10px ; 
+  margin-top:10px ; 
+}
 .drop-cnt{
   /* background-color: #3333ff; */
   background-color: #9933ff;
   /* display : block ;  */
   width:fit-content  ;
-  height : 30px; 
+  height : 40px; 
   border-radius: 5px;
   padding-top : 5px ;
   padding-left : 5px ; 
   padding-right : 5px ;  
   /* border : 0 ;  */
-  margin:5px ; 
+  margin-left: 5px ; 
   border:0;
+  
 
 }
-.drop-inpt{
-  width:130px;
-  height : 30px; 
-  border-radius: 5px;
-  padding-left : 5px ; 
-  margin:5px ; 
-  /* color : white ; */
-  background-color: white ;
-  /* margin:5px   */
+.drop-cnt:hover{
+  color : black ; 
+  transform: translate(2px , 2px )  ; 
+
+}
+.title{
+  display : flex ; 
+  justify-content: center;
+  margin: 4px ; 
+}
+.title h1:hover{
+  color:"blue" ; 
 }
